--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,82 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+.nav-bar .navigation{
+	background-color: none;
+	display: flex;
+	justify-content: space-between;
+}
+.navigation a{
+	color: grey;
+	text-decoration: none;
+	font-size: 1.4rem;
+}
+.header{
+	display: flex;
+	text-align: center;
+	align-items: center;
+	justify-content: space-evenly;
+}
+.header h1{
+	font-size: 50pt; 
+}
+button{ 
+	border:1px solid black;
+	font-family: "Titillium Web";
+	background-color: white;
+	
+}
+.bigCircle-img{
+	display: flex;
+}
+.bigCircle{
+	display: flex;
+}
+.summaries-top{
+	border-top: dotted 2px black;
+	padding:30px 0px 30px;
+	margin-top: 20px;
+}
+.summaries-top .Features{
+	display: inline-block;
+	width: 49%;
+	margin-right: 5px;
+}
+
+.summaries-top .About{
+	display: inline-block;
+	width: 49%;
+}
+.middle-img{
+	display:block;
+	width:100%;
+	margin-bottom:30px;
+}
+.wrapper{
+	border-bottom: dotted 2px black;
+	padding:20px 0px 30px;
+	margin-bottom: 20px;
+	display: grid;
+	grid-template-columns:350px 350px 350px;
+}
+.summaries .Services{
+	display: inline-block;
+	width: 270px;
+	margin-right: 29px;
+}
+.summaries .Product{
+	display: inline-block;
+	width: 270px;
+	margin-right:29px;
+}
+.summaries .Vision{
+	display: inline-block;
+	width: 270px;
+}
+footer{
+	margin: 40px 0;
+	padding-bottom: 40px;
+}
+.copyright{
+	text-align: center;
+}	
