--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -30,6 +30,10 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	margin-top: 20px;
+	margin-right: 75px;
+	margin-left: 75px;
+	margin bottom 75px;
 }
 ol, ul {
 	list-style: none;
@@ -67,51 +71,62 @@ h1, h2, h3, h4, h5 {
 .nav-bar .navigation{
 	background-color: none;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 }
 .navigation a{
 	color: grey;
 	text-decoration: none;
-	font-size: 1.4rem;
+	font-size: 1rem;
+	margin-bottom: 50px;
+}
+.logo{
+	margin-bottom: 50px;
 }
 .header{
 	display: flex;
-	text-align: center;
-	align-items: center;
 	justify-content: space-evenly;
+	text-align: center;
+	align-items: baseline;
 }
 .header h1{
-	font-size: 50pt; 
+	font-size: 55pt; 
+	align-self:center;
+	margin-top: 50px;
 }
 button{ 
 	border:1px solid black;
 	font-family: "Titillium Web";
-	background-color: white;
-	
+	background-color: white;	
+	align-content: stretch;
+	box-sizing: content-box;
+	padding-top: 6px;
+	padding-right: 45px;
+	padding-bottom: 6px;
+	padding-left: 45px;
+	margin-bottom: 45px;
 }
 .bigCircle-img{
-	display: flex;
+	margin-top: 15px;
+	margin-bottom: 40px;
 }
 .bigCircle{
-	display: flex;
 }
 .summaries-top{
 	border-top: dotted 2px black;
 	padding:30px 0px 30px;
 	margin-top: 20px;
+	display:flex;
 }
 .summaries-top .Features{
-	display: inline-block;
 	width: 49%;
 	margin-right: 5px;
 }
 
 .summaries-top .About{
-	display: inline-block;
 	width: 49%;
 }
 .middle-img{
-	display:block;
+	display:flex;
 	width:100%;
 	margin-bottom:30px;
 }
@@ -119,27 +134,29 @@ button{
 	border-bottom: dotted 2px black;
 	padding:20px 0px 30px;
 	margin-bottom: 20px;
-	display: grid;
+	display: flex;
 	grid-template-columns:350px 350px 350px;
+	justify-content: center;
 }
 .summaries .Services{
-	display: inline-block;
 	width: 270px;
 	margin-right: 29px;
 }
 .summaries .Product{
-	display: inline-block;
 	width: 270px;
 	margin-right:29px;
 }
 .summaries .Vision{
-	display: inline-block;
 	width: 270px;
 }
 footer{
 	margin: 40px 0;
 	padding-bottom: 40px;
 }
+footer>a{
+	margin-bottom:45px;
+}
 .copyright{
 	text-align: center;
+	margin-top: 45px;
 }	
